made pnl setup and kill switch

--- a/Phemex-Algo-CCXT/model.ipynb
+++ b/Phemex-Algo-CCXT/model.ipynb
@@ -50,7 +50,8 @@
     "    'apiKey': xP_KEY,\n",
     "    'secret': xP_SECRAT\n",
     "})\n",
-    "symbol = 'BTCUSD'"
+    "symbol = 'BTCUSD'\n",
+    "symbol_str = \"STRKUSDTM\""
    ]
   },
   {
@@ -639,15 +640,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Starting the Kill switching ...\n",
       "Starting PNL ...\n",
-      "Difference is 0.00086 and Percentage: 0.18%\n",
+      "Difference: 0.00155, Current Price: 0.47017, Entry Price: 0.46862, Side: long, Percentage: 0.33%\n",
       "In Profit but  not hit the target, so wait !!\n",
       "Finishing the PNL close ...\n"
      ]
@@ -655,10 +657,10 @@
     {
      "data": {
       "text/plain": [
-       "(False, False)"
+       "(False, 'size', 'long')"
       ]
      },
-     "execution_count": 440,
+     "execution_count": 464,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +671,9 @@
     "def kill_switch():\n",
     "    print(\"Starting the Kill switching ...\")\n",
     "    # TODO: Implement the Kill Switch\n",
-    "    pass\n",
+    "\n",
+    "    open_pos, _, size, side = pnl_close_kucoin()\n",
+    "    return open_pos, size, side\n",
     "\n",
     "def pnl_close_phemex():\n",
     "    print(\"🔍 Checking to see if it's time to exit on Phemex...\")\n",
@@ -701,9 +705,13 @@
     "\n",
     "    poc_dic = kucoin.fetch_ticker(symbol='STRK/USDT')\n",
     "    perc = poc_dic['percentage']\n",
-    "    diff = poc_dic['info']['changePrice']\n",
+    "    diff = float(poc_dic['info']['changePrice'])\n",
+    "    current_price = poc_dic['last']\n",
+    "    entry_price = float(poc_dic['open']) \n",
+    "    side = 'long' if (diff >= 0 and current_price >= entry_price) else 'short'\n",
+    "    \n",
+    "    print(f\"Difference: {diff}, Current Price: {current_price}, Entry Price: {entry_price}, Side: {side}, Percentage: {perc}%\")\n",
     "\n",
-    "    print(f\"Difference is {diff} and Percentage: {perc}%\")\n",
     "\n",
     "    pnlclose = False\n",
     "    in_pos = False\n",
@@ -721,10 +729,86 @@
     "        print(\"We are not in Profit yet.\")\n",
     "    print(\"Finishing the PNL close ...\")\n",
     "\n",
-    "    return pnlclose, in_pos\n",
+    "    return pnlclose, in_pos,\"size\",side\n",
     "\n",
     "# print(pnl_close_phemex())\n",
-    "pnl_close_kucoin()\n"
+    "# pnl_close_kucoin()\n",
+    "kill_switch()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 492,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '300000000001847863',\n",
+       " 'symbol': 'STRKUSDTM',\n",
+       " 'autoDeposit': False,\n",
+       " 'crossMode': False,\n",
+       " 'maintMarginReq': 0.012,\n",
+       " 'riskLimit': 10000,\n",
+       " 'realLeverage': 1.0,\n",
+       " 'delevPercentage': 0.28,\n",
+       " 'openingTimestamp': 1727612017604,\n",
+       " 'currentTimestamp': 1727624276658,\n",
+       " 'currentQty': 2,\n",
+       " 'currentCost': 0.9278,\n",
+       " 'currentComm': 0.00055668,\n",
+       " 'unrealisedCost': 0.9278,\n",
+       " 'realisedGrossCost': 0.0,\n",
+       " 'realisedCost': 0.00055668,\n",
+       " 'isOpen': True,\n",
+       " 'markPrice': 0.4738,\n",
+       " 'markValue': 0.9476,\n",
+       " 'posCost': 0.9278,\n",
+       " 'posCross': 0,\n",
+       " 'posCrossMargin': 0,\n",
+       " 'posInit': 0.9278,\n",
+       " 'posComm': 0.00111336,\n",
+       " 'posCommCommon': 0.00111336,\n",
+       " 'posLoss': 0,\n",
+       " 'posMargin': 0.92891336,\n",
+       " 'posFunding': 0,\n",
+       " 'posMaint': 0.01224696,\n",
+       " 'maintMargin': 0.94871336,\n",
+       " 'realisedGrossPnl': 0.0,\n",
+       " 'realisedPnl': -0.00055668,\n",
+       " 'unrealisedPnl': 0.0198,\n",
+       " 'unrealisedPnlPcnt': 0.0213,\n",
+       " 'unrealisedRoePcnt': 0.0213,\n",
+       " 'avgEntryPrice': 0.4639,\n",
+       " 'liquidationPrice': 0.0056,\n",
+       " 'bankruptPrice': 0.0001,\n",
+       " 'settleCurrency': 'USDT',\n",
+       " 'maintainMargin': 0.012,\n",
+       " 'riskLimitLevel': 1,\n",
+       " 'marginMode': 'ISOLATED',\n",
+       " 'positionSide': 'BOTH',\n",
+       " 'leverage': 1.0}"
+      ]
+     },
+     "execution_count": 492,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "from kucoin_futures.client import Trade\n",
+    "\n",
+    "client = Trade(key=kC_KEY, secret=kC_SECRET, passphrase=kC_PASSWORD)\n",
+    "\n",
+    "positions = client.get_position_details(symbol=\"STRKUSDTM\")\n",
+    "\n",
+    "# Write positions to sample.json\n",
+    "with open('../sample.json', 'w') as f:\n",
+    "    json.dump(positions, f, indent=4)\n",
+    "\n",
+    "positions\n"
    ]
   },
   {
