--- a/Phemex-Algo-CCXT/model.ipynb
+++ b/Phemex-Algo-CCXT/model.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "[100 rows x 8 columns]"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 496,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
@@ -363,12 +363,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>65686.4</td>\n",
-       "      <td>65686.4</td>\n",
-       "      <td>65625.4</td>\n",
-       "      <td>65651.4</td>\n",
-       "      <td>11701.0</td>\n",
-       "      <td>2024-09-28 12:15:00</td>\n",
+       "      <td>65660.3</td>\n",
+       "      <td>65668.4</td>\n",
+       "      <td>65625.1</td>\n",
+       "      <td>65625.1</td>\n",
+       "      <td>96174.0</td>\n",
+       "      <td>2024-09-28 15:30:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -377,12 +377,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>65643.8</td>\n",
-       "      <td>65643.8</td>\n",
-       "      <td>65387.2</td>\n",
-       "      <td>65437.7</td>\n",
-       "      <td>822651.0</td>\n",
-       "      <td>2024-09-28 12:30:00</td>\n",
+       "      <td>65625.0</td>\n",
+       "      <td>65647.9</td>\n",
+       "      <td>65625.0</td>\n",
+       "      <td>65626.9</td>\n",
+       "      <td>17329.0</td>\n",
+       "      <td>2024-09-28 15:45:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -391,12 +391,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>65465.4</td>\n",
-       "      <td>65542.5</td>\n",
-       "      <td>65463.9</td>\n",
-       "      <td>65538.4</td>\n",
-       "      <td>102612.0</td>\n",
-       "      <td>2024-09-28 12:45:00</td>\n",
+       "      <td>65625.1</td>\n",
+       "      <td>65625.1</td>\n",
+       "      <td>65585.6</td>\n",
+       "      <td>65609.9</td>\n",
+       "      <td>123529.0</td>\n",
+       "      <td>2024-09-28 16:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -405,12 +405,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>65538.4</td>\n",
-       "      <td>65541.8</td>\n",
-       "      <td>65439.5</td>\n",
-       "      <td>65454.4</td>\n",
-       "      <td>293387.0</td>\n",
-       "      <td>2024-09-28 13:00:00</td>\n",
+       "      <td>65593.2</td>\n",
+       "      <td>65662.5</td>\n",
+       "      <td>65564.2</td>\n",
+       "      <td>65660.6</td>\n",
+       "      <td>409661.0</td>\n",
+       "      <td>2024-09-28 16:15:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -419,12 +419,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>65454.3</td>\n",
-       "      <td>65546.8</td>\n",
-       "      <td>65403.7</td>\n",
-       "      <td>65546.6</td>\n",
-       "      <td>445696.0</td>\n",
-       "      <td>2024-09-28 13:15:00</td>\n",
+       "      <td>65659.7</td>\n",
+       "      <td>65659.7</td>\n",
+       "      <td>65512.7</td>\n",
+       "      <td>65528.3</td>\n",
+       "      <td>195161.0</td>\n",
+       "      <td>2024-09-28 16:30:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -447,73 +447,73 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>65682.8</td>\n",
-       "      <td>65749.9</td>\n",
-       "      <td>65682.8</td>\n",
-       "      <td>65704.9</td>\n",
-       "      <td>92476.0</td>\n",
-       "      <td>2024-09-29 12:00:00</td>\n",
-       "      <td>65570.545</td>\n",
-       "      <td>65636.115545</td>\n",
-       "      <td>65373.833365</td>\n",
-       "      <td>65504.974455</td>\n",
-       "      <td>65767.256635</td>\n",
+       "      <td>65693.2</td>\n",
+       "      <td>65800.0</td>\n",
+       "      <td>65610.6</td>\n",
+       "      <td>65629.9</td>\n",
+       "      <td>295981.0</td>\n",
+       "      <td>2024-09-29 15:15:00</td>\n",
+       "      <td>65685.500</td>\n",
+       "      <td>65751.185500</td>\n",
+       "      <td>65488.443500</td>\n",
+       "      <td>65619.814500</td>\n",
+       "      <td>65882.556500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>65705.6</td>\n",
-       "      <td>65745.0</td>\n",
-       "      <td>65666.1</td>\n",
-       "      <td>65667.0</td>\n",
-       "      <td>78355.0</td>\n",
-       "      <td>2024-09-29 12:15:00</td>\n",
-       "      <td>65579.350</td>\n",
-       "      <td>65644.929350</td>\n",
-       "      <td>65382.611950</td>\n",
-       "      <td>65513.770650</td>\n",
-       "      <td>65776.088050</td>\n",
+       "      <td>65629.8</td>\n",
+       "      <td>65734.8</td>\n",
+       "      <td>65629.8</td>\n",
+       "      <td>65727.9</td>\n",
+       "      <td>155584.0</td>\n",
+       "      <td>2024-09-29 15:30:00</td>\n",
+       "      <td>65696.525</td>\n",
+       "      <td>65762.221525</td>\n",
+       "      <td>65499.435425</td>\n",
+       "      <td>65630.828475</td>\n",
+       "      <td>65893.614575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>65667.0</td>\n",
-       "      <td>65711.0</td>\n",
-       "      <td>65660.7</td>\n",
-       "      <td>65708.1</td>\n",
-       "      <td>57588.0</td>\n",
-       "      <td>2024-09-29 12:30:00</td>\n",
-       "      <td>65590.020</td>\n",
-       "      <td>65655.610020</td>\n",
-       "      <td>65393.249940</td>\n",
-       "      <td>65524.429980</td>\n",
-       "      <td>65786.790060</td>\n",
+       "      <td>65729.0</td>\n",
+       "      <td>65769.2</td>\n",
+       "      <td>65707.9</td>\n",
+       "      <td>65729.7</td>\n",
+       "      <td>172796.0</td>\n",
+       "      <td>2024-09-29 15:45:00</td>\n",
+       "      <td>65705.895</td>\n",
+       "      <td>65771.600895</td>\n",
+       "      <td>65508.777315</td>\n",
+       "      <td>65640.189105</td>\n",
+       "      <td>65903.012685</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>65708.1</td>\n",
-       "      <td>65708.3</td>\n",
-       "      <td>65618.9</td>\n",
-       "      <td>65620.1</td>\n",
-       "      <td>132580.0</td>\n",
-       "      <td>2024-09-29 12:45:00</td>\n",
-       "      <td>65598.000</td>\n",
-       "      <td>65663.598000</td>\n",
-       "      <td>65401.206000</td>\n",
-       "      <td>65532.402000</td>\n",
-       "      <td>65794.794000</td>\n",
+       "      <td>65729.9</td>\n",
+       "      <td>65770.0</td>\n",
+       "      <td>65713.9</td>\n",
+       "      <td>65732.9</td>\n",
+       "      <td>73104.0</td>\n",
+       "      <td>2024-09-29 16:00:00</td>\n",
+       "      <td>65710.835</td>\n",
+       "      <td>65776.545835</td>\n",
+       "      <td>65513.702495</td>\n",
+       "      <td>65645.124165</td>\n",
+       "      <td>65907.967505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>65619.8</td>\n",
-       "      <td>65769.8</td>\n",
-       "      <td>65581.6</td>\n",
-       "      <td>65764.4</td>\n",
-       "      <td>55173.0</td>\n",
-       "      <td>2024-09-29 13:00:00</td>\n",
-       "      <td>65610.145</td>\n",
-       "      <td>65675.755145</td>\n",
-       "      <td>65413.314565</td>\n",
-       "      <td>65544.534855</td>\n",
-       "      <td>65806.975435</td>\n",
+       "      <td>65737.5</td>\n",
+       "      <td>65737.5</td>\n",
+       "      <td>65694.9</td>\n",
+       "      <td>65694.9</td>\n",
+       "      <td>22394.0</td>\n",
+       "      <td>2024-09-29 16:15:00</td>\n",
+       "      <td>65713.775</td>\n",
+       "      <td>65779.488775</td>\n",
+       "      <td>65516.633675</td>\n",
+       "      <td>65648.061225</td>\n",
+       "      <td>65910.916325</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -522,17 +522,17 @@
       ],
       "text/plain": [
        "       open     high      low    close    volume                date  \\\n",
-       "0   65686.4  65686.4  65625.4  65651.4   11701.0 2024-09-28 12:15:00   \n",
-       "1   65643.8  65643.8  65387.2  65437.7  822651.0 2024-09-28 12:30:00   \n",
-       "2   65465.4  65542.5  65463.9  65538.4  102612.0 2024-09-28 12:45:00   \n",
-       "3   65538.4  65541.8  65439.5  65454.4  293387.0 2024-09-28 13:00:00   \n",
-       "4   65454.3  65546.8  65403.7  65546.6  445696.0 2024-09-28 13:15:00   \n",
+       "0   65660.3  65668.4  65625.1  65625.1   96174.0 2024-09-28 15:30:00   \n",
+       "1   65625.0  65647.9  65625.0  65626.9   17329.0 2024-09-28 15:45:00   \n",
+       "2   65625.1  65625.1  65585.6  65609.9  123529.0 2024-09-28 16:00:00   \n",
+       "3   65593.2  65662.5  65564.2  65660.6  409661.0 2024-09-28 16:15:00   \n",
+       "4   65659.7  65659.7  65512.7  65528.3  195161.0 2024-09-28 16:30:00   \n",
        "..      ...      ...      ...      ...       ...                 ...   \n",
-       "95  65682.8  65749.9  65682.8  65704.9   92476.0 2024-09-29 12:00:00   \n",
-       "96  65705.6  65745.0  65666.1  65667.0   78355.0 2024-09-29 12:15:00   \n",
-       "97  65667.0  65711.0  65660.7  65708.1   57588.0 2024-09-29 12:30:00   \n",
-       "98  65708.1  65708.3  65618.9  65620.1  132580.0 2024-09-29 12:45:00   \n",
-       "99  65619.8  65769.8  65581.6  65764.4   55173.0 2024-09-29 13:00:00   \n",
+       "95  65693.2  65800.0  65610.6  65629.9  295981.0 2024-09-29 15:15:00   \n",
+       "96  65629.8  65734.8  65629.8  65727.9  155584.0 2024-09-29 15:30:00   \n",
+       "97  65729.0  65769.2  65707.9  65729.7  172796.0 2024-09-29 15:45:00   \n",
+       "98  65729.9  65770.0  65713.9  65732.9   73104.0 2024-09-29 16:00:00   \n",
+       "99  65737.5  65737.5  65694.9  65694.9   22394.0 2024-09-29 16:15:00   \n",
        "\n",
        "      SMA_15m          bp_1          bp_2          sp_1          sp_2  \n",
        "0         NaN           NaN           NaN           NaN           NaN  \n",
@@ -541,16 +541,16 @@
        "3         NaN           NaN           NaN           NaN           NaN  \n",
        "4         NaN           NaN           NaN           NaN           NaN  \n",
        "..        ...           ...           ...           ...           ...  \n",
-       "95  65570.545  65636.115545  65373.833365  65504.974455  65767.256635  \n",
-       "96  65579.350  65644.929350  65382.611950  65513.770650  65776.088050  \n",
-       "97  65590.020  65655.610020  65393.249940  65524.429980  65786.790060  \n",
-       "98  65598.000  65663.598000  65401.206000  65532.402000  65794.794000  \n",
-       "99  65610.145  65675.755145  65413.314565  65544.534855  65806.975435  \n",
+       "95  65685.500  65751.185500  65488.443500  65619.814500  65882.556500  \n",
+       "96  65696.525  65762.221525  65499.435425  65630.828475  65893.614575  \n",
+       "97  65705.895  65771.600895  65508.777315  65640.189105  65903.012685  \n",
+       "98  65710.835  65776.545835  65513.702495  65645.124165  65907.967505  \n",
+       "99  65713.775  65779.488775  65516.633675  65648.061225  65910.916325  \n",
        "\n",
        "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
      "text": [
       "Starting the Kill switching ...\n",
       "Starting PNL ...\n",
-      "Difference: 0.00155, Current Price: 0.47017, Entry Price: 0.46862, Side: long, Percentage: 0.33%\n",
+      "Difference: 0.008, Current Price: 0.47283, Entry Price: 0.46483, Side: long, Percentage: 1.72%\n",
       "In Profit but  not hit the target, so wait !!\n",
       "Finishing the PNL close ...\n"
      ]
@@ -660,7 +660,7 @@
        "(False, 'size', 'long')"
       ]
      },
-     "execution_count": 464,
+     "execution_count": 500,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [
     {
@@ -751,9 +751,9 @@
        " 'maintMarginReq': 0.012,\n",
        " 'riskLimit': 10000,\n",
        " 'realLeverage': 1.0,\n",
-       " 'delevPercentage': 0.28,\n",
+       " 'delevPercentage': 0.32,\n",
        " 'openingTimestamp': 1727612017604,\n",
-       " 'currentTimestamp': 1727624276658,\n",
+       " 'currentTimestamp': 1727627637703,\n",
        " 'currentQty': 2,\n",
        " 'currentCost': 0.9278,\n",
        " 'currentComm': 0.00055668,\n",
@@ -761,8 +761,8 @@
        " 'realisedGrossCost': 0.0,\n",
        " 'realisedCost': 0.00055668,\n",
        " 'isOpen': True,\n",
-       " 'markPrice': 0.4738,\n",
-       " 'markValue': 0.9476,\n",
+       " 'markPrice': 0.4734,\n",
+       " 'markValue': 0.9468,\n",
        " 'posCost': 0.9278,\n",
        " 'posCross': 0,\n",
        " 'posCrossMargin': 0,\n",
@@ -773,12 +773,12 @@
        " 'posMargin': 0.92891336,\n",
        " 'posFunding': 0,\n",
        " 'posMaint': 0.01224696,\n",
-       " 'maintMargin': 0.94871336,\n",
+       " 'maintMargin': 0.94791336,\n",
        " 'realisedGrossPnl': 0.0,\n",
        " 'realisedPnl': -0.00055668,\n",
-       " 'unrealisedPnl': 0.0198,\n",
-       " 'unrealisedPnlPcnt': 0.0213,\n",
-       " 'unrealisedRoePcnt': 0.0213,\n",
+       " 'unrealisedPnl': 0.019,\n",
+       " 'unrealisedPnlPcnt': 0.0205,\n",
+       " 'unrealisedRoePcnt': 0.0205,\n",
        " 'avgEntryPrice': 0.4639,\n",
        " 'liquidationPrice': 0.0056,\n",
        " 'bankruptPrice': 0.0001,\n",
@@ -790,7 +790,7 @@
        " 'leverage': 1.0}"
       ]
      },
-     "execution_count": 492,
+     "execution_count": 503,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
     "with open('../sample.json', 'w') as f:\n",
     "    json.dump(positions, f, indent=4)\n",
     "\n",
-    "positions\n"
+    "positions"
    ]
   },
   {
