--- a/Phemex-Algo-CCXT/model.ipynb
+++ b/Phemex-Algo-CCXT/model.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, True)"
+       "(61200.1, 61200.0)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,9 +82,12 @@
    "source": [
     "from kucoin_futures.client import Trade\n",
     "\n",
-    "def get_pos_size(sy):        \n",
+    "def get_size_pos(sy):        \n",
     "    client = Trade(key=kC_KEY, secret=kC_SECRET, passphrase=kC_PASSWORD)\n",
-    "    positions = client.get_position_details(symbol=sy)\n",
+    "    try:\n",
+    "        positions = client.get_position_details(symbol=sy)\n",
+    "    except Exception as e:\n",
+    "        return 0,False\n",
     "    return positions['currentQty'], positions['isOpen']\n",
     "\n",
     "def ask_bid_kucoi(symbol):\n",
@@ -96,7 +99,8 @@
     "    return order_book['asks'][0][0], order_book['bids'][0][0]\n",
     "\n",
     "# Example usage with a static symbol for Bitcoin\n",
-    "get_pos_size(sy=symbol_str)"
+    "# get_pos_size(sy=symbol_btc)\n",
+    "ask_bid_kucoi(symbol=ORIGINAL_SYM_BIT)"
    ]
   },
   {
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +311,7 @@
        "[100 rows x 8 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -538,16 +542,16 @@
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>61281.0</td>\n",
-       "      <td>61321.1</td>\n",
+       "      <td>61342.5</td>\n",
        "      <td>61254.9</td>\n",
-       "      <td>61321.0</td>\n",
-       "      <td>1.502953</td>\n",
+       "      <td>61274.1</td>\n",
+       "      <td>5.860334</td>\n",
        "      <td>2024-10-03 06:30:00</td>\n",
-       "      <td>61241.890</td>\n",
-       "      <td>61303.131890</td>\n",
-       "      <td>61058.164330</td>\n",
-       "      <td>61180.648110</td>\n",
-       "      <td>61425.615670</td>\n",
+       "      <td>61239.545</td>\n",
+       "      <td>61300.784545</td>\n",
+       "      <td>61055.826365</td>\n",
+       "      <td>61178.305455</td>\n",
+       "      <td>61423.263635</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -566,7 +570,7 @@
        "96  61212.1  61228.4  61119.8  61176.5   6.428896 2024-10-03 05:45:00   \n",
        "97  61176.0  61278.4  61107.2  61247.9  11.024344 2024-10-03 06:00:00   \n",
        "98  61247.9  61298.2  61241.9  61279.5   4.201154 2024-10-03 06:15:00   \n",
-       "99  61281.0  61321.1  61254.9  61321.0   1.502953 2024-10-03 06:30:00   \n",
+       "99  61281.0  61342.5  61254.9  61274.1   5.860334 2024-10-03 06:30:00   \n",
        "\n",
        "      SMA_15m          bp_1          bp_2          sp_1          sp_2  \n",
        "0         NaN           NaN           NaN           NaN           NaN  \n",
@@ -579,12 +583,12 @@
        "96  61214.795  61276.009795  61031.150615  61153.580205  61398.439385  \n",
        "97  61221.980  61283.201980  61038.314060  61160.758020  61405.645940  \n",
        "98  61227.745  61288.972745  61044.061765  61166.517255  61411.428235  \n",
-       "99  61241.890  61303.131890  61058.164330  61180.648110  61425.615670  \n",
+       "99  61239.545  61300.784545  61055.826365  61178.305455  61423.263635  \n",
        "\n",
        "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,12 +626,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bot"
+    "# Kill Switch & Pnl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -636,10 +640,21 @@
      "text": [
       "Starting the Kill switching ...\n",
       "Starting PNL ...\n",
-      "Difference: 0.00487, Current Price: 0.4665, Entry Price: 0.46163, Side: long, Percentage: 1.05%\n",
-      "In Profit but  not hit the target, so wait !!\n",
-      "Finishing the PNL close ...\n",
-      "open position: True side: long Size postion: 2\n"
+      "Difference: -0.03033, Current Price: 0.36819, Entry Price: 0.39852, Side: long, Percentage: -7.61%\n",
+      "We are not in Profit yet.\n",
+      "Finishing the PNL close ...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_size_pos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 81\u001b[0m\n\u001b[0;32m     77\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pnlclose, in_pos,side\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# print(pnl_close_phemex())\u001b[39;00m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;66;03m# pnl_close_kucoin()\u001b[39;00m\n\u001b[1;32m---> 81\u001b[0m \u001b[43mkill_switch\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[47], line 7\u001b[0m, in \u001b[0;36mkill_switch\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# TODO: Implement the Kill Switch\u001b[39;00m\n\u001b[0;32m      6\u001b[0m pnl_c, _ ,side \u001b[38;5;241m=\u001b[39m pnl_close_kucoin() \u001b[38;5;66;03m#! pnl_close, open_pos, Side-long,short\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m size_for_kill,open_p \u001b[38;5;241m=\u001b[39m \u001b[43mget_size_pos\u001b[49m(sy\u001b[38;5;241m=\u001b[39msymbol_str)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mopen position: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mopen_p\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m side: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mside\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Size postion: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msize_for_kill\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m open_p:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_size_pos' is not defined"
      ]
     }
    ],
@@ -650,10 +665,39 @@
     "    print(\"Starting the Kill switching ...\")\n",
     "    # TODO: Implement the Kill Switch\n",
     "    pnl_c, _ ,side = pnl_close_kucoin() #! pnl_close, open_pos, Side-long,short\n",
-    "    size,open_p = get_pos_size(sy=symbol_str)\n",
+    "    size_for_kill,open_p = get_size_pos(sy=symbol_str)\n",
     "\n",
-    "    print(f\"open position: {open_p} side: {side} Size postion: {size}\")\n",
+    "    print(f\"open position: {open_p} side: {side} Size postion: {size_for_kill}\")\n",
+    "\n",
+    "    while open_p:\n",
+    "\n",
+    "        print(\"Starting the Kill Swtiching the Position...\")\n",
+    "        # TODO: Code for cancling all the position\n",
+    "\n",
+    "        open_p,size_for_kill= get_size_pos()\n",
+    "        side = pnl_close_kucoin()[2]\n",
+    "\n",
+    "        ask,bid = ask_bid_kucoi(symbol=ORIGINAL_SYM_STR)\n",
+    "\n",
+    "        if side == \"long\":\n",
+    "            \n",
+    "            # TODO: We are in long and Create SELL order\n",
+    "            print(f\" ---- ----- ----- Just Made the Order for SELL at {ask} for {symbol_str} size: {size_for_kill}\")\n",
+    "            print(\"30 secs After Order ...\")\n",
+    "            time.sleep(30)\n",
+    "\n",
+    "        elif side == \"short\":\n",
+    "\n",
+    "            # TODO: We are in long and Create SELL order\n",
+    "            print(f\" ---- ----- Just Made the Order for BUY at {bid} for {symbol_str} siz: {size_for_kill}\")\n",
+    "            print(\"30 secs After Order ...\")\n",
+    "            time.sleep(30)\n",
+    "\n",
+    "        else:\n",
+    "            print(\"== == == Side is not defined so wait ...\")\n",
     "        \n",
+    "        size_for_kill, open_p = get_size_pos()\n",
+    "\n",
     "    \n",
     "def pnl_close_kucoin():\n",
     "    print(\"Starting PNL ...\")\n",
@@ -665,7 +709,12 @@
     "    diff = float(poc_dic['info']['changePrice'])\n",
     "    current_price = poc_dic['last']\n",
     "    entry_price = float(poc_dic['open']) \n",
-    "    side = 'long' if (diff >= 0 and current_price >= entry_price) else 'short'\n",
+    "    if (diff > 0 and current_price > entry_price) or ( diff < 0 and current_price < entry_price):\n",
+    "        side = \"long\"\n",
+    "    elif diff == 0:\n",
+    "        side = \"None\"\n",
+    "    else:\n",
+    "        side = \"short\"\n",
     "    \n",
     "    print(f\"Difference: {diff}, Current Price: {current_price}, Entry Price: {entry_price}, Side: {side}, Percentage: {perc}%\")\n",
     "\n",
@@ -690,7 +739,7 @@
     "\n",
     "# print(pnl_close_phemex())\n",
     "# pnl_close_kucoin()\n",
-    "kill_switch()\n"
+    "kill_switch()"
    ]
   },
   {
