made fake wallet

--- a/Phemex-Algo-CCXT/model.ipynb
+++ b/Phemex-Algo-CCXT/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from datetime import date, datetime, timezone, tzinfo"
+    "from datetime import date, datetime, timezone, tzinfo\n",
+    "import sys\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +34,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kucoin API object and Fake Wallet"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the KuCoin exchange object\n",
+    "from FakeMoney import FakeWallet\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "\n",
     "kucoin = ccxt.kucoin({\n",
     "    'enableRateLimit': True,\n",
     "    'apiKey': kC_KEY,\n",
@@ -53,7 +65,11 @@
     "ORIGINAL_SYM_BIT = \"BTC/USDT\"\n",
     "ORIGINAL_SYM_STR = \"STRK/USDT\"\n",
     "symbol_btc = 'BTCUSDTM'\n",
-    "symbol_str = \"STRKUSDTM\"\n"
+    "symbol_str = \"STRKUSDTM\"\n",
+    "\n",
+    "F_wallet = FakeWallet(1000)\n",
+    "\n",
+    "COIN_QUNTITY_SIZE = 2\n"
    ]
   },
   {
@@ -65,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(61200.1, 61200.0)"
+       "(60723.8, 60723.7)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,9 +114,8 @@
     "    order_book = phemex.fetch_order_book(symbol=symbol)\n",
     "    return order_book['asks'][0][0], order_book['bids'][0][0]\n",
     "\n",
-    "# Example usage with a static symbol for Bitcoin\n",
-    "# get_pos_size(sy=symbol_btc)\n",
-    "ask_bid_kucoi(symbol=ORIGINAL_SYM_BIT)"
+    "# ! Helping Function for the Offline mode\n",
+    "\n"
    ]
   },
   {
@@ -631,33 +646,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting the Kill switching ...\n",
-      "Starting PNL ...\n",
-      "Difference: -0.03033, Current Price: 0.36819, Entry Price: 0.39852, Side: long, Percentage: -7.61%\n",
-      "We are not in Profit yet.\n",
-      "Finishing the PNL close ...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'get_size_pos' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 81\u001b[0m\n\u001b[0;32m     77\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pnlclose, in_pos,side\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# print(pnl_close_phemex())\u001b[39;00m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;66;03m# pnl_close_kucoin()\u001b[39;00m\n\u001b[1;32m---> 81\u001b[0m \u001b[43mkill_switch\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[47], line 7\u001b[0m, in \u001b[0;36mkill_switch\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# TODO: Implement the Kill Switch\u001b[39;00m\n\u001b[0;32m      6\u001b[0m pnl_c, _ ,side \u001b[38;5;241m=\u001b[39m pnl_close_kucoin() \u001b[38;5;66;03m#! pnl_close, open_pos, Side-long,short\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m size_for_kill,open_p \u001b[38;5;241m=\u001b[39m \u001b[43mget_size_pos\u001b[49m(sy\u001b[38;5;241m=\u001b[39msymbol_str)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mopen position: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mopen_p\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m side: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mside\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Size postion: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msize_for_kill\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m open_p:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'get_size_pos' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "target = 25\n",
     "\n",
@@ -674,7 +665,7 @@
     "        print(\"Starting the Kill Swtiching the Position...\")\n",
     "        # TODO: Code for cancling all the position\n",
     "\n",
-    "        open_p,size_for_kill= get_size_pos()\n",
+    "        open_p,size_for_kill= get_size_pos(sy=symbol_str)\n",
     "        side = pnl_close_kucoin()[2]\n",
     "\n",
     "        ask,bid = ask_bid_kucoi(symbol=ORIGINAL_SYM_STR)\n",
@@ -696,8 +687,8 @@
     "        else:\n",
     "            print(\"== == == Side is not defined so wait ...\")\n",
     "        \n",
-    "        size_for_kill, open_p = get_size_pos()\n",
-    "\n",
+    "        size_for_kill, open_p = get_size_pos(sy=symbol_str)\n",
+    "        \n",
     "    \n",
     "def pnl_close_kucoin():\n",
     "    print(\"Starting PNL ...\")\n",
@@ -729,7 +720,7 @@
     "            pnlclose = True\n",
     "            kill_switch()\n",
     "        else:\n",
-    "            print(\"In Profit but  not hit the target, so wait !!\")\n",
+    "            print(\"In Profit but   not hit the target, so wait !!\")\n",
     "    else:\n",
     "        in_pos = True\n",
     "        print(\"We are not in Profit yet.\")\n",
@@ -767,9 +758,9 @@
     "    # * Define OPEN Order\n",
     "    signal = data_20d.iloc[-1]['SIGNAL']\n",
     "    \n",
-    "    open_size = 1\n",
     "    \n",
-    "    in_pos = pnl_close()[1]\n",
+    "    pnl_close_kucoin()\n",
+    "    _,in_pos = get_size_pos(sy=ORIGINAL_SYM_BIT)\n",
     "\n",
     "\n",
     "    if not in_pos:\n",
